<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_news"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_vertical_margin"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:text="@string/kou_hao"
        android:textColor="@android:color/black"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertisement"
        android:textColor="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginTop="@dimen/common_vertical_margin"
        android:id="@+id/textView3" />

</LinearLayout>